# simpleProtocol

./: .gitignore  CMakeLists.txt  README.md  main.cpp  spclient.cpp  spclient.h  sptupletype.h  sptype.cpp  sptype.h  tcpconnector.cpp  tcpconnector.h  tcpstream.cpp  tcpstream.h  tsqueue.h
